Web | Safari | Ipad mini 3 | When the keypad is open in cc activity the bottom app bar is getting misaligned and more white space is displayed - fixed

--- a/www/css/home.css
+++ b/www/css/home.css
@@ -986,6 +986,12 @@ and (orientation : landscape) {
 .widget-maincontent-div .homeRow-fluid { height: 520px;}
 }
 
-@media handheld, only screen and (max-width: 736px) { }
-
- 
+ @media only screen  and (min-device-width: 768px) and (max-device-width: 1024px) 
+ {
+ .hideSection .float_footer {
+top: auto !important;
+bottom: 0;
+height: 92px;
+width: 100%;
+z-index: 999;
+}
